# rust-template

./: .rustfmt.toml  Cargo.toml  TODO.md
src/: main.rs
