[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
ariadne = "0.1.5"
chrono = "0.4.22"
const_unit_poc = "1.1.3"
cute = "0.3.0"
derive_more = "0.99.17"
egg = "0.9.1"
either = "1.8.0"
flame = "0.2.2"
flamer = "0.4.0"
fs-err = "2.8.1"
glob = "0.3.0"
globset = "0.4.9"
indextree = "4.5.0"
insta = "1.20.0"
itertools = "0.10.5"
maplit = "1.0.2"
nom = "7.1.1"
num = "0.4.0"
once_cell = "1.15.0"
permutator = "0.4.3"
petgraph = "0.6.2"
proptest = "1.0.0"
rand = "0.8.5"
rayon = "1.5.3"
regex = "1.6.0"
reqwest = "0.11.12"
serde = "1.0.145"
serde_dhall = "0.12.0"
serde_json = "1.0.85"
smallvec = "1.9.0"
soa_derive = "0.12.0"
structopt = "0.3.26"
tap = "1.0.1"
thiserror = "1.0.36"
tokio = "1.21.1"
tracing = "0.1.36"
walkdir = "2.3.2"
